fix: corrected z-index for autocomplete dropdown

--- a/phpmyfaq/assets/scss/layout/_autocomplete.scss
+++ b/phpmyfaq/assets/scss/layout/_autocomplete.scss
@@ -29,6 +29,7 @@
 
 .autocomplete {
   @extend .list-group;
+  z-index: 1000;
 }
 
 .autocomplete > div {
